[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "op-capi"
version = "0.1.0"
description = "ctypes wrapper for OP C API DLL"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "OP contributors" }
]

[tool.setuptools.packages.find]
where = ["."]
include = ["op*"]

[tool.setuptools.package-data]
op = ["bin/x86/*.dll", "bin/x64/*.dll"]
